[package]
name = "toy_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
csv-async = { version = "1.2.1", features = ["tokio","with_serde"]}
serde = { version = "1.0.127", features = ["derive"] }
futures = "0.3.16"
